--- a/index.html
+++ b/index.html
@@ -11,4 +11,17 @@
 		<link rel="stylesheet" href="./style.css" />
 		<title>Landing Page</title>
   </head>
+  <body>
+		<header>
+			<div class="logo-container">
+				<img src="" alt="logo" />
+				<h4 class="logo">Three Dots</h4>
+			</div>
+
+			<div class="cart">
+				<img src="" alt="cart" />
+			</div>
+    </header>
+
+  </body>
 </html>
