--- a/index.html
+++ b/index.html
@@ -17,7 +17,13 @@
 				<img src="" alt="logo" />
 				<h4 class="logo">Three Dots</h4>
 			</div>
-
+			<nav>
+				<ul class="nav-links">
+					<li><a class="nav-link" href="#">About</a></li>
+					<li><a class="nav-link" href="#">Projects</a></li>
+					<li><a class="nav-link" href="#">Contact</a></li>
+				</ul>
+			</nav>
 			<div class="cart">
 				<img src="" alt="cart" />
 			</div>
