--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
   <body>
 		<header>
 			<div class="logo-container">
-				<img src="" alt="logo" />
+				<img src="./img/logo.svg" alt="logo" />
 				<h4 class="logo">Three Dots</h4>
 			</div>
 			<nav>
@@ -25,7 +25,7 @@
 				</ul>
 			</nav>
 			<div class="cart">
-				<img src="" alt="cart" />
+				<img src="./img/cart.svg" alt="cart" />
 			</div>
     </header>
 
