--- a/index.html
+++ b/index.html
@@ -29,5 +29,37 @@
 			</div>
     </header>
 
+    <main>
+			<section class="presentation">
+				<div class="introduction">
+					<div class="intro-text">
+						<h1>Laptop for the future</h1>
+						<p>
+							The new 14 inch bezeless display oferring a 4k
+							display with touch screen.
+						</p>
+					</div>
+					<div class="cta">
+						<button class="cta-select">14 Inch</button>
+						<button class="cta-add">Add To Cart</button>
+					</div>
+				</div>
+				<div class="cover">
+					<img src="" alt="" />
+				</div>
+      </section>
+
+      <div class="laptop-select">
+				<img src="./img/arrow-left.svg" alt="" />
+				<img src="./img/dot.svg" alt="" />
+				<img src="./img/dot-full.svg" alt="" />
+				<img src="./img/dot-full.svg" alt="" />
+				<img src="./img/arrow-right.svg" alt="" />
+			</div>
+
+			<img class="big-circle" src="./img/big-eclipse.svg" alt="" />
+			<img class="medium-circle" src="./img/mid-eclipse.svg" alt="" />
+			<img class="small-circle" src="./img/small-eclipse.svg" alt="" />
+    </main>
   </body>
 </html>
