--- a/index.html
+++ b/index.html
@@ -33,19 +33,19 @@
 			<section class="presentation">
 				<div class="introduction">
 					<div class="intro-text">
-						<h1>Laptop for the future</h1>
+						<h1>Responsive design</h1>
 						<p>
-							The new 14 inch bezeless display oferring a 4k
-							display with touch screen.
+              This is a webpage displaying some of my 
+              responsive web design skills.
 						</p>
 					</div>
 					<div class="cta">
-						<button class="cta-select">14 Inch</button>
-						<button class="cta-add">Add To Cart</button>
+						<button class="cta-select">Colors</button>
+						<button class="cta-add">Designs</button>
 					</div>
 				</div>
 				<div class="cover">
-					<img src="" alt="" />
+					<img src="./img/headshot.jpg" alt="" />
 				</div>
       </section>
 
