Change name to Ian Holladay

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
 			<section class="presentation">
 				<div class="introduction">
 					<div class="intro-text">
-						<h1>Responsive design</h1>
+						<h1>Ian Holladay</h1>
 						<p>
               This is a webpage displaying some of my 
               responsive web design skills.
