Add note about button arrows

--- a/index.html
+++ b/index.html
@@ -51,10 +51,12 @@
 
       <div class="laptop-select">
 				<img src="./img/arrow-left.svg" alt="" />
+				<!-- Should these become buttons? -->
 				<img src="./img/dot.svg" alt="" />
 				<img src="./img/dot-full.svg" alt="" />
 				<img src="./img/dot-full.svg" alt="" />
 				<img src="./img/arrow-right.svg" alt="" />
+				<!-- Should these become buttons? -->
 			</div>
 
 			<img class="big-circle" src="./img/big-eclipse.svg" alt="" />
