--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
 			<img class="big-circle" src="./img/big-eclipse.svg" alt="" />
 			<img class="medium-circle" src="./img/mid-eclipse.svg" alt="" />
 			<img class="small-circle" src="./img/small-eclipse.svg" alt="" />
-    </main>
+		</main>
+		<script src="./src/main.js"></script>
   </body>
 </html>
