change arrows to buttons

--- a/index.html
+++ b/index.html
@@ -50,12 +50,16 @@
       </section>
 
       <div class="laptop-select">
-				<img src="./img/arrow-left.svg" alt="" />
+				<button>
+					<img src="./img/arrow-left.svg" alt="" />
+				</button>
 				<!-- Should these become buttons? -->
 				<img src="./img/dot.svg" alt="" />
 				<img src="./img/dot-full.svg" alt="" />
 				<img src="./img/dot-full.svg" alt="" />
-				<img src="./img/arrow-right.svg" alt="" />
+				<button>
+					<img src="./img/arrow-right.svg" alt="" />
+				</button>
 				<!-- Should these become buttons? -->
 			</div>
 
