Change both buttons to the same styling

--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
 					</div>
 					<div class="cta">
 						<button class="cta-select">Colors</button>
-						<button class="cta-add">Designs</button>
+						<button class="cta-select">Designs</button>
 					</div>
 				</div>
 				<div class="cover">
@@ -50,14 +50,14 @@
       </section>
 
       <div class="laptop-select">
-				<button>
+				<button class="arrow-button">
 					<img src="./img/arrow-left.svg" alt="" />
 				</button>
 				<!-- Should these become buttons? -->
 				<img src="./img/dot.svg" alt="" />
 				<img src="./img/dot-full.svg" alt="" />
 				<img src="./img/dot-full.svg" alt="" />
-				<button>
+				<button class="arrow-button">
 					<img src="./img/arrow-right.svg" alt="" />
 				</button>
 				<!-- Should these become buttons? -->
