Add classes to buttons and dots

--- a/index.html
+++ b/index.html
@@ -45,28 +45,26 @@
 					</div>
 				</div>
 				<div class="cover">
-					<img src="./img/headshot.jpg" alt="" />
+					<img class="current-image" src="./img/headshot.jpg" alt="" />
 				</div>
       </section>
 
       <div class="laptop-select">
-				<button class="arrow-button">
+				<button class="arrow-button ab-left">
 					<img src="./img/arrow-left.svg" alt="" />
 				</button>
-				<!-- Should these become buttons? -->
-				<img src="./img/dot.svg" alt="" />
-				<img src="./img/dot-full.svg" alt="" />
-				<img src="./img/dot-full.svg" alt="" />
-				<button class="arrow-button">
+				<img class="dot-0" src="./img/dot.svg" alt="" />
+				<img class="dot-1" src="./img/dot-full.svg" alt="" />
+				<img class="dot-2" src="./img/dot-full.svg" alt="" />
+				<button class="arrow-button ab-right">
 					<img src="./img/arrow-right.svg" alt="" />
 				</button>
-				<!-- Should these become buttons? -->
 			</div>
 
 			<img class="big-circle" src="./img/big-eclipse.svg" alt="" />
 			<img class="medium-circle" src="./img/mid-eclipse.svg" alt="" />
 			<img class="small-circle" src="./img/small-eclipse.svg" alt="" />
 		</main>
-		<script src="./src/main.js"></script>
+		<script src="./main.js"></script>
   </body>
 </html>
