Change nav-links to buttons for single page display

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 			</div>
 			<nav>
 				<ul class="nav-links">
-					<li><a class="nav-link" href="#">About</a></li>
-					<li><a class="nav-link" href="#">Projects</a></li>
-					<li><a class="nav-link" href="#">Contact</a></li>
+					<li><button class="nav-link about">About</button></li>
+					<li><button class="nav-link projects">Projects</button></li>
+					<li><button class="nav-link contact">Contact</button></li>
 				</ul>
 			</nav>
 			<div class="cart">
@@ -30,38 +30,55 @@
     </header>
 
     <main>
-			<section class="presentation">
-				<div class="introduction">
-					<div class="intro-text">
-						<h1>Ian Holladay</h1>
-						<p>
-              This is a webpage displaying some of my 
-              responsive web design skills.
-						</p>
-					</div>
-					<div class="cta">
-						<button class="cta-select">Colors</button>
-						<button class="cta-select">Designs</button>
-					</div>
-				</div>
-				<div class="cover">
-					<img class="current-image" src="./img/headshot.jpg" alt="" />
-				</div>
-      </section>
 
-      <div class="laptop-select">
-				<button class="arrow-button ab-left">
-					<img src="./img/arrow-left.svg" alt="" />
-				</button>
-				<img class="dot-0" src="./img/dot.svg" alt="" />
-				<img class="dot-1" src="./img/dot-full.svg" alt="" />
-				<img class="dot-2" src="./img/dot-full.svg" alt="" />
-				<button class="arrow-button ab-right">
-					<img src="./img/arrow-right.svg" alt="" />
-				</button>
-			</div>
+			<section class="landing">
 
-			<img class="big-circle" src="./img/big-eclipse.svg" alt="" />
+				<section class="presentation">
+					<div class="introduction">
+						<div class="intro-text">
+							<h1>Ian Holladay</h1>
+							<p>
+								This is a webpage displaying some of my 
+								responsive web design skills.
+							</p>
+						</div>
+						<div class="cta">
+							<button class="cta-select">Colors</button>
+							<button class="cta-select">Designs</button>
+						</div>
+					</div>
+					<div class="cover">
+						<img class="current-image" src="./img/headshot.jpg" alt="" />
+					</div>
+				</section>
+				
+				<div class="laptop-select">
+					<button class="arrow-button ab-left">
+						<img src="./img/arrow-left.svg" alt="" />
+					</button>
+					<img class="dot-0" src="./img/dot.svg" alt="" />
+					<img class="dot-1" src="./img/dot-full.svg" alt="" />
+					<img class="dot-2" src="./img/dot-full.svg" alt="" />
+					<button class="arrow-button ab-right">
+						<img src="./img/arrow-right.svg" alt="" />
+					</button>
+				</div>
+
+			</section>
+
+			<section class="about-view hidden">
+
+			</section>
+
+			<section class="projects-view hidden">
+
+			</section>
+
+			<section class="contact-view hidden">
+
+			</section>
+				
+				<img class="big-circle" src="./img/big-eclipse.svg" alt="" />
 			<img class="medium-circle" src="./img/mid-eclipse.svg" alt="" />
 			<img class="small-circle" src="./img/small-eclipse.svg" alt="" />
 		</main>
