Make top buttons interactable

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 		<header>
 			<div class="logo-container">
 				<img src="./img/logo.svg" alt="logo" />
-				<h4 class="logo">Three Dots</h4>
+				<h4 class="logo">Home</h4>
 			</div>
 			<nav>
 				<ul class="nav-links">
@@ -31,7 +31,7 @@
 
     <main>
 
-			<section class="landing">
+			<section class="landing-view">
 
 				<section class="presentation">
 					<div class="introduction">
@@ -67,15 +67,16 @@
 			</section>
 
 			<section class="about-view hidden">
+				about
 
 			</section>
 
 			<section class="projects-view hidden">
-
+				projects
 			</section>
 
 			<section class="contact-view hidden">
-
+				contact
 			</section>
 				
 				<img class="big-circle" src="./img/big-eclipse.svg" alt="" />
