all different pages

--- a/index.html
+++ b/index.html
@@ -67,16 +67,36 @@
 			</section>
 
 			<section class="about-view hidden">
-				about
-
+				<div class="introduction view">
+					<div class="intro-text view">
+						<h1>About Me</h1>
+						<p>
+							I'm big dumb
+						</p>
+					</div>
+				</div>
 			</section>
 
 			<section class="projects-view hidden">
-				projects
+				<div class="introduction view">
+					<div class="intro-text view">
+						<h1>Projects</h1>
+						<p>
+							They all suck
+						</p>
+					</div>
+				</div>
 			</section>
 
 			<section class="contact-view hidden">
-				contact
+				<div class="introduction view">
+					<div class="intro-text view">
+						<h1>Contact</h1>
+						<p>
+							nah fah foh foh foh nah fah
+						</p>
+					</div>
+				</div>
 			</section>
 				
 				<img class="big-circle" src="./img/big-eclipse.svg" alt="" />
