--- a/index.html
+++ b/index.html
@@ -68,10 +68,10 @@
 
 			<section class="about-view hidden">
 				<div class="introduction view">
-					<div class="intro-text view">
+					<div class="intro-text view mini-view">
 						<h1>About Me</h1>
 						<p>
-							I'm big dumb
+							As an Alaskan born and raised resident, I have had the privilege to experience some of the wildest adventures out there. Currently, I reside in Colorado Springs, CO, and I spend my time honing my skills as an empathetic Software Developer. 
 						</p>
 					</div>
 				</div>
@@ -82,7 +82,7 @@
 					<div class="intro-text view">
 						<h1>Projects</h1>
 						<p>
-							They all suck
+							Soon to come...
 						</p>
 					</div>
 				</div>
@@ -92,9 +92,23 @@
 				<div class="introduction view">
 					<div class="intro-text view">
 						<h1>Contact</h1>
-						<p>
-							nah fah foh foh foh nah fah
-						</p>
+						<section class="contact-info">
+							<div>
+								phone: (907)-978-3238
+							</div>
+							<div>
+								email: holladayian@gmail.com
+							</div>
+							<div>
+								GitHub: @holladayian
+							</div>
+							<div>
+								LinkedIn: Ian Holladay
+							</div>
+							<div>
+								portfolio: Link
+							</div>
+						</section>
 					</div>
 				</div>
 			</section>
