change divs to table

--- a/index.html
+++ b/index.html
@@ -93,7 +93,25 @@
 					<div class="intro-text view">
 						<h1>Contact</h1>
 						<section class="contact-info">
-							<div>
+							<table>
+								<tr>
+									<th>Phone</th>
+									<th>(907)-978-3238</th>
+								</tr>
+								<tr>
+									<th>Email</th>
+									<th>Holladayian@gmail.com</th>
+								</tr>
+								<tr>
+									<th>GitHub</th>
+									<th>@holladayian</th>
+								</tr>
+								<tr>
+									<th>LinkedIn</th>
+									<th>Ian Holladay</th>
+								</tr>
+							</table>
+							<!-- <div>
 								phone: (907)-978-3238
 							</div>
 							<div>
@@ -107,7 +125,7 @@
 							</div>
 							<div>
 								portfolio: Link
-							</div>
+							</div> -->
 						</section>
 					</div>
 				</div>
