Add links to github and linkedin

--- a/index.html
+++ b/index.html
@@ -100,15 +100,15 @@
 								</tr>
 								<tr>
 									<th>Email</th>
-									<th>Holladayian@gmail.com</th>
+									<th>holladayian@gmail.com</th>
 								</tr>
 								<tr>
 									<th>GitHub</th>
-									<th>@holladayian</th>
+									<th><a href="https://github.com/holladayian">@holladayian</a></th>
 								</tr>
 								<tr>
 									<th>LinkedIn</th>
-									<th>Ian Holladay</th>
+									<th><a href="https://www.linkedin.com/in/ian-holladay/">Ian Holladay</a></th>
 								</tr>
 							</table>
 							<!-- <div>
