--- a/index.html
+++ b/index.html
@@ -104,11 +104,11 @@
 								</tr>
 								<tr>
 									<th>GitHub</th>
-									<th><a href="https://github.com/holladayian">@holladayian</a></th>
+									<th><a href="https://github.com/holladayian" target="_blank">@holladayian</a></th>
 								</tr>
 								<tr>
 									<th>LinkedIn</th>
-									<th><a href="https://www.linkedin.com/in/ian-holladay/">Ian Holladay</a></th>
+									<th><a href="https://www.linkedin.com/in/ian-holladay/" target="_blank">Ian Holladay</a></th>
 								</tr>
 							</table>
 							<!-- <div>
