Add portfolio to contact

--- a/index.html
+++ b/index.html
@@ -110,6 +110,10 @@
 									<th>LinkedIn</th>
 									<th><a href="https://www.linkedin.com/in/ian-holladay/" target="_blank">Ian Holladay</a></th>
 								</tr>
+								<tr>
+									<th>Portfolio</th>
+									<th><a href="https://terminal.turing.edu/profiles/524" target="_blank">profile</a></th>
+								</tr>
 							</table>
 						</section>
 					</div>
