add image to about section

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
 					</div>
 				</section>
 				
-				<div class="laptop-select">
+				<!-- <div class="laptop-select">
 					<button class="arrow-button ab-left">
 						<img src="./img/arrow-left.svg" alt="" />
 					</button>
@@ -62,11 +62,11 @@
 					<button class="arrow-button ab-right">
 						<img src="./img/arrow-right.svg" alt="" />
 					</button>
-				</div>
+				</div> -->
 
 			</section>
 
-			<section class="about-view hidden">
+			<section class="about-view presentation hidden">
 				<div class="introduction view">
 					<div class="intro-text view mini-view">
 						<h1>About Me</h1>
@@ -74,6 +74,9 @@
 							As an Alaskan born and raised resident, I have had the privilege to experience some of the wildest adventures out there. Currently, I reside in Colorado Springs, CO, and I spend my time honing my skills as an empathetic Software Developer. 
 						</p>
 					</div>
+				</div>
+				<div class="cover">
+					<img class="current-image" src="./img/london.jpeg" alt="" />
 				</div>
 			</section>
 
