Change about me photo drop

--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
 						</p>
 					</div>
 				</div>
-				<div class="cover">
+				<div class="cover-2">
 					<img class="current-image" src="./img/london.jpeg" alt="" />
 				</div>
 			</section>
