Comment out buttons for now

--- a/index.html
+++ b/index.html
@@ -42,10 +42,10 @@
 								responsive web design skills.
 							</p>
 						</div>
-						<div class="cta">
+						<!-- <div class="cta">
 							<button class="cta-select">Colors</button>
 							<button class="cta-select">Designs</button>
-						</div>
+						</div> -->
 					</div>
 					<div class="cover">
 						<img class="current-image" src="./img/headshot.jpg" alt="" />
