change phrasing of about section

--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
 					<div class="intro-text view mini-view">
 						<h1>About Me</h1>
 						<p>
-							As an Alaskan born and raised resident, I have had the privilege to experience some of the wildest adventures out there. Currently, I reside in Colorado Springs, CO, and I spend my time honing my skills as an empathetic Software Developer. 
+							As an Alaskan born and raised resident, I have had the privilege to experience some of the wildest adventures out there. Currently, I reside in Colorado Springs, CO, and I spend my time honing my skills as an empathy-driven Software Developer. 
 						</p>
 					</div>
 				</div>
