Set moon's width

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
 				</ul>
 			</nav>
 			<div class="cart">
+				<!-- <img src="./img/cart.svg" alt="cart" /> -->
 				<img src="./img/dark-mode.png" alt="cart" />
 			</div>
     </header>
