Add cursor pointer to moon

--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
 			</nav>
 			<div class="cart">
 				<!-- <img src="./img/cart.svg" alt="cart" /> -->
-				<img src="./img/dark-mode.png" alt="cart" />
+				<img class="dark-mode" src="./img/dark-mode.png" alt="cart" />
 			</div>
     </header>
 
