Comment out darkMode toggle until completion

--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 				<section class="presentation">
 					<div class="introduction">
-						<div class="intro-text mode">
+						<div class="intro-text">
 							<h1 class="mode">Ian Holladay</h1>
 							<p class="mode">
 								This is a webpage displaying some of my 
